# HCT

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kyant/hct/demo/: HctApp.kt  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
hct/: build.gradle.kts
hct-compose/: build.gradle.kts
hct-compose/src/main/java/com/kyant/hct/: Hct.kt
hct-rust/: Cargo.toml
hct-rust/.cargo/: config.toml
hct-rust/src/: color_utils.rs  hct_solver.rs  lib.rs  math_utils.rs
hct/src/main/cpp/: CMakeLists.txt  achromatic_cielab.cpp  achromatic_cielab.h  cat.cpp  cat.h  ciexyz.cpp  ciexyz.h  hct.cpp  hct.h  kcam.cpp  kcam.h  lib.cpp  math_ext.h  rgb_color_spaces.h  srgb.cpp  srgb.h  zcam.cpp  zcam.h
hct/src/main/java/com/kyant/hct/: DynamicScheme.kt  Hct.kt  HctUtils.java  SchemeStyle.kt
